<resources>
    <string name="app_name">CakeorderingApp223</string>
    <string name="splash_top_text">Designed By\n K.Sai Mohit Kumar\n20191CSE0223</string>
    <string name="splash_middle_text">Welcome to Don\'t Tell Aunty</string>
    <string name="menu_sc_mohit">K.SAI MOHIT KUMAR - 20191CSE0223</string>
    <string name="menu">Menu</string>
    <string name="dont">Don\'t Tell Aunty\nOne Stop for Tasty Cakes</string>
    <string name="contact_information">Contact Information</string>
    <string name="name">Name</string>
    <string name="mobile">Contact Number</string>
    <string name="address">Address</string>
    <string name="home">Goto Home</string>
    <string name="package_details">Package Details</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="delivery_content">%s</string>
    <string name="contact_details">Customer Name :\t%s\nMobile :\t%s\nAddress :\t%s\nDelivery Date : \t%s</string>
</resources>