<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/tv_menu_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/menu_sc_mohit"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_menu_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_pkg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_rounded"
                android:paddingStart="64dp"
                android:paddingTop="6dp"
                android:paddingEnd="64dp"
                android:paddingBottom="8dp"
                android:text="@string/package_details"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_rounded_border"
                android:paddingStart="4dp"
                android:paddingTop="16dp"
                android:paddingEnd="4dp"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textColor="@color/white"
                tools:text="@string/app_name" />

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_rounded"
                android:paddingStart="64dp"
                android:paddingTop="8dp"
                android:paddingEnd="64dp"
                android:paddingBottom="8dp"
                android:text="@string/delivery_details"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_contact_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/btn_rounded_border"
                android:paddingStart="4dp"
                android:paddingTop="16dp"
                android:paddingEnd="4dp"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:textColor="@color/white"
                tools:text="@string/app_name" />
        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/iv_lgo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_above="@id/btn_home"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_img" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/home"
        android:textColor="@color/black"
        app:backgroundTint="@color/white" />
</RelativeLayout>